Sleep dept calculator

--- a/index.html
+++ b/index.html
@@ -3,29 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/designSystem.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>Java Script Practice projects</title>
 </head>
 <body>
     <div class="container">
     <div class="sectionOne">
-        <div class="sectionOne--title">
+        <div class="sectionOne--title text-white">
             <h1>JavaScript projects</h1>
         </div>
         <div class="sectionOne--nav flex">
-           <div class="item1"><a href="sleep-debt-calculator.html">Sleep dept calculator</a> </div>
-            <div class="item2"><a href="rock-paper-scissors.html">Rock Paper Scissors</a> </div>
-            <div class="item2"><a href="meal-maker.html">Meal maker</a> </div>
-            <div class="item3"><a href="Chore Door/index.html">Chore Door</a></div>
+
+
+           <div class="item1 text-white"><a href="sleep-debt-calculator.html">Sleep dept calculator</a> </div>
+            <div class="item2 text-white"><a href="rock-paper-scissors.html">Rock Paper Scissors</a> </div>
+            <div class="item2 text-white"><a href="meal-maker.html">Meal maker</a> </div>
+            <div class="item3 text-white"><a href="Chore Door/index.html">Chore Door</a></div>
         </div>
     </div>
     <div class="sectionTwo flex">
-        <img src="jpeg/sleeping.jpeg" alt="Sleep dept calculator" class="responsive-image">
-        <img src="jpeg/rockpaperscissors.jpeg" alt="Rock Paper Scissors" class="responsive-image">
-        <img src="jpeg/mealMaker.jpeg" alt="Meal maker" class="responsive-image">
+        <div class="card">
+            <img src="jpeg/sleeping.jpeg" alt="Sleep dept calculator" class="responsive-image">
+            <button class="white-btn">Read more</button>
+        </div>
+
+        <div class="card">
+            <img src="jpeg/rockpaperscissors.jpeg" alt="Rock Paper Scissors" class="responsive-image">
+            <button class="white-btn">Read more</button>
+        </div>
+        <div class="card">
+            <img src="jpeg/mealMaker.jpeg" alt="Meal maker" class="responsive-image">
+            <button class="white-btn">Read more</button>
+        </div>
+    <div class="card">
         <img src="jpeg/door.jpeg" alt="Chore Door" class="responsive-image">
+        <button class="white-btn">Read more</button>
     </div>
+        
+    </div>
+
 </div>
     
 </body>
