--- a/sleep-debt-calculator.html
+++ b/sleep-debt-calculator.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript practice</title>
+    <link rel="stylesheet" href="style/designSystem.css">
 </head>
 <body>
+    <div class="container">
+        <div class="sectionOne">
+            <div class="sectionOne-label label text-center">JavaScript Practice</div>
+            <div class="sectionOne-title title text-center"> Sleep Dept Calculator</div>
+        <div class="sectionTwo flex">
+            <img class="sectionTwo-left responsive-image" src="jpeg/sleeping.jpeg"></img>
+            <div class="sectionTwo-content text-dark text-left">Did you know that giraffes sleep 4.6 hours a day? We humans need more than that. 
+               <p> If we don’t sleep enough, we accumulate sleep debt. 
+                In this project we’ll calculate if you’re getting enough sleep each week using a sleep debt calculator.
+                The program will determine the actual and ideal hours of sleep for each night of the last week.
+                Finally, it will calculate, in hours, how far you are from your weekly sleep goal.</p>
+                <br>
+                <button class="white-btn">Explore</button></div>
+             
+        </div>
+
+        
+        </div>
+    </div>
+
     <script src="sleepDebtCalculator.js"></script>
 </body>
 </html>
