--- a/Chore Door/index.html
+++ b/Chore Door/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Chore Door</title>
+    <link rel="stylesheet" href="..//styles/designSystem.css">
     <link href="./style.css" type="text/css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
