index.html style hero section yellow-btn

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="icon" href="src/images/logo/AD-run logo.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js"></script>
     <script id="templateHB" type="text/x-handlebars-template">
-        <p class="sectionOne__left--label label text-white">{{subtitle}}</p>
+        <p class="sectionOne__left--label label text-yellow left">{{subtitle}}</p>
         <h2 class="sectionOne__left--title title text-white">{{title}}</h2>
         <div class="sectionOne__left--text text-white">{{body}}</div>
-        <button onclick="location.href='projects.html'" class="sectionOne__left--btn white-btn" type="button">Projects</button>
+        <button onclick="location.href='projects.html'" class="sectionOne__left--btn yellow-btn" type="button">Projects</button>
     </script>
     <title>AD-run web development portfolio - home</title>
 </head>
