--- a/projects.html
+++ b/projects.html
@@ -14,17 +14,17 @@
         {{#if this.finished}}
         <img class="responsive-image card" src="{{this.image}}" alt="{{this.name}}">
         <div class="flex">
-            <div class="label">{{this.label}}</div>
-            <h2 class="text-blue">{{this.name}}</h2>
-            <p class="text-blue">{{this.description}}</p>
+            <div class="label left">{{this.label}}</div>
+            <h2 class="text-blue left">{{this.name}}</h2>
+            <p class="text-blue left">{{this.description}}</p>
             <button onclick="location.href='{{this.link}}'" class="dark-btn sectionOne__left--btn" type="button">Check it out</button>
         </div>
         {{else}}
         <img class="responsive-image card" src="{{this.image}}" alt="{{this.name}}">
         <div class="flex">
-            <div class="label">{{this.label}}</div>
-            <h2 class="text-blue">{{this.name}}</h2>
-            <div class="text-pink"> {{this.progress}}<i class="bi bi-hourglass-split">{{this.progressIcon}}</i></div>
+            <div class="label left">{{this.label}}</div>
+            <h2 class="text-blue left">{{this.name}}</h2>
+            <div class="text-pink left"> {{this.progress}}<i class="bi bi-hourglass-split">{{this.progressIcon}}</i></div>
             
         </div>
         {{/if}}
