new images is added

--- a/index.html
+++ b/index.html
@@ -93,33 +93,41 @@
 
 </div>
 
-<div class="hero-25">
-    <div class="sectionThree container grid">
-        <img src="src/images/logo/web-development-life-cycle.jpg" alt="" class="sectionThree__left responsive-image">
-        <div class="sectionThree__right flex">
-            <div class="sectionTree__right-label label text-blue">Web Development</div>
-            <div class="sectionTree__right-title title">Web development life cycle</div>
-            <div class="sectionTree__right-text">
-                <p>The Web Development Life Cycle is a method that outlines the stages involved 
-                    in building websites and web applications. 
-                    It provides a structured approach, ensuring optimal results throughout the development process.  
-                </p>
-            </div>
-                <div class="subtitle-5">The 7 Stages of The Web Development Life Cycle –</div>
-                <ol>
-                    <li>Gathering Relevant Information</li>
-                    <li>Planning - Sitemap and Wireframe</li>
-                    <li>Design Layout</li>
-                    <li>Content Creation</li>
-                    <li>Development</li>
-                    <li>Testing, Review, and Launch</li>
-                    <li> Maintenance and Updation</li>
-                </ol>
-            
-            <button onclick="location.href='https://www.signitysolutions.com/blog/web-development-life-cycle'"  class="sectionTree__right-button dark-btn">Read more</button>
-        </div>
-    
+
+
+<div class="sectionThree">
+    <div class="sectionThree__content container flex text-center">
+        <div class="sectionThree__content-label label text-white">Web development life cycle</div>
+        <div class="sectionThree__content-title title text-white">The 7 Stages of The Web Development Life Cycle</div>
+        <div class="sectionThree__content-text text-white">The Web Development Life Cycle is a method that outlines the stages involved 
+            in building websites and web applications. 
+            It provides a structured approach, ensuring optimal results throughout the development process.  </div>
     </div>
+</div>
+<div class="sectionFour">
+<div class="sectionFour__stages">
+    <img src="src/images/hero/1.png" alt="" class="responsive-image item-1-image">
+    <div class="sectionFour__stages-title item-1-title subtitle-4">Gathering Relevant Information</div>
+
+    <img src="src/images/hero/2.png" alt="" class="responsive-image item-2-image">
+    <div class="sectionFour__stages-title item-2-title subtitle-4">Planning - Sitemap and Wireframe</div>
+
+    <img src="src/images/hero/3.png" alt="" class="responsive-image item-3-image">
+    <div class="sectionFour__stages-title item-3-title subtitle-4">Design Layout</div>
+
+    <img src="src/images/hero/4.png" alt="" class="responsive-image item-4-image">
+    <div class="sectionFour__stages-title item-4-title subtitle-4">Content Creation</div>
+
+    <img src="src/images/hero/5.png" alt="" class="responsive-image item-5-image">
+    <div class="sectionFour__stages-title item-5-title subtitle-4">Development</div>
+
+    <img src="src/images/hero/6.png" alt="" class="responsive-image item-6-image">
+    <div class="sectionFour__stages-title item-6-title subtitle-4">Testing, Review, and Launch</div>
+
+    <img src="src/images/hero/7.png" alt="" class="responsive-image item-7-image">
+    <div class="sectionFour__stages-title item-7-title subtitle-4">Maintenance and Updation</div>
+</div>
+<button onclick="location.href='https://www.signitysolutions.com/blog/web-development-life-cycle'"  class="sectionFour-button dark-btn">Read more</button>
 </div>
  
 </body>
