--- a/NumberGuesser/numberGuesser.html
+++ b/NumberGuesser/numberGuesser.html
@@ -1,1 +1,33 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Number Guesser</title>
+    <link rel="stylesheet" href="styles/designSystem.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="../src/images/logo/ad_run_logo.png">
+</head>
+<body>
+    <div class="hero">
+        <div class="navbar container">
+            <div class="navbar__logo text-white">
+                <img src="/src/images/logo/ad_run_logo.png" class="navbar__logo--image" alt="AD-run web development logo">
+                <div class="navbar__logo--text">AD web portfolio</div>
+            </div>
+            <div class="navbar__menu hidden text-white">
+                <a href="/index.html" class="navbar__menu--1">Home</a>
+                <a href="/projects.html" class="navbar__menu--2">Projects</a>
+                <a href="" class="navbar__menu--3">Services</a>
+                <a href="" class="navbar__menu--4">Contact</a>
+            </div>
+            <div class="navbar__icons">
+                <i class="bi bi-list"></i>
+                <i class="bi bi-x-lg hide"></i>
+            </div>
+        </div>
+    
+    
+</body>
+<script src="main.js"></script> 
+</html>
