--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/designSystem.css">
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="icon" href="src/images/logo/AD-run logo.png">
+    <link rel="icon" href="src/images/logo/ad_run_logo.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js"></script>
     <script id="templateHB" type="text/x-handlebars-template">
         <p class="sectionOne__left--label label text-yellow left">{{subtitle}}</p>
@@ -23,7 +23,6 @@
         <div class="navbar__logo text-white">
             <img src="src/images/logo/ad_run_logo.png" class="navbar__logo--image" alt="ad run logo">
             <div class="navbar__logo--text">AD web portfolio</div>
-            
         </div>
         <div class="navbar__menu hidden text-white">
             <a href="index.html" class="navbar__menu--1">Home</a>
@@ -35,7 +34,6 @@
             <i class="bi bi-list"></i>
             <i class="bi bi-x-lg hide"></i>
         </div>
-
     </div>
 
     <div class="sectionOne container grid">
